apps/jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    argocd.argoproj.io/health-ignore: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: jellyfin.essenov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
